@@ -1,10 +1,9 @@
 package org.cardanofoundation.signify.app;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.goterl.lazysodium.exceptions.SodiumException;
 import org.cardanofoundation.signify.app.coring.Operation;
 import org.cardanofoundation.signify.app.coring.Operations;
 import org.cardanofoundation.signify.app.coring.deps.OperationsDeps;
+import org.cardanofoundation.signify.cesr.exceptions.LibsodiumException;
 import org.cardanofoundation.signify.cesr.util.Utils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -37,77 +36,77 @@ public class OperationsTest {
 
     @Test
     @DisplayName("should get operation by name")
-    void canGetOperationByName() throws SodiumException, IOException, InterruptedException {
+    void canGetOperationByName() throws IOException, InterruptedException, LibsodiumException {
         String operationName = UUID.randomUUID().toString();
         String responseBody = "{\"name\":\"" + operationName + "\"}";
 
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn(responseBody);
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse);
 
         operations.get("operationName");
 
-        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull(), isNull());
+        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull());
         assertEquals("/operations/operationName", pathCaptor.getValue());
         assertEquals("GET", methodCaptor.getValue());
     }
 
     @Test
     @DisplayName("Can list operations")
-    void canListOperations() throws SodiumException, IOException, InterruptedException {
+    void canListOperations() throws IOException, InterruptedException, LibsodiumException {
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn("[{}]");
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse);
 
         var response = operations.list(null);
 
-        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull(), isNull());
+        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull());
         assertEquals("/operations", pathCaptor.getValue());
         assertEquals("GET", methodCaptor.getValue());
     }
 
     @Test
     @DisplayName("Can list operations by type")
-    void canListOperationsByType() throws SodiumException, IOException, InterruptedException {
+    void canListOperationsByType() throws IOException, InterruptedException, LibsodiumException {
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn(Utils.jsonStringify(Collections.singletonList(buildOperation(true, true))));
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse);
 
         var opsResponse = operations.list("witness");
 
-        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull(), isNull());
+        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull());
         assertEquals("/operations?type=witness", pathCaptor.getValue());
         assertEquals("GET", methodCaptor.getValue());
 
         assertEquals(1, opsResponse.size());
-        assertEquals("response", opsResponse.get(0).getResponse());
+        assertEquals("response", opsResponse.getFirst().getResponse());
     }
 
     @Test
     @DisplayName("Can delete operation by name")
-    void canDeleteOperationByName() throws SodiumException, IOException, InterruptedException {
+    void canDeleteOperationByName() throws IOException, InterruptedException, LibsodiumException {
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn("{}");
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse);
 
         operations.delete("operationName");
 
-        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull(), isNull());
+        verify(client).fetch(pathCaptor.capture(), methodCaptor.capture(), isNull());
         assertEquals("/operations/operationName", pathCaptor.getValue());
         assertEquals("DELETE", methodCaptor.getValue());
     }
 
     @Test
     @DisplayName("Does not wait for operation that is already done")
-    void doesNotWaitForOperationThatIsAlreadyDone() throws SodiumException, IOException, InterruptedException {
+    void doesNotWaitForOperationThatIsAlreadyDone() throws IOException, InterruptedException, LibsodiumException {
         Operation<String> operation = buildOperation(true, true);
 
         var result = operations.wait(operation);
@@ -117,23 +116,23 @@ public class OperationsTest {
 
     @Test
     @DisplayName("Returns when operation is done after first call")
-    void returnsWhenOperationIsDoneAfterFirstCall() throws SodiumException, JsonProcessingException, IOException, InterruptedException {
+    void returnsWhenOperationIsDoneAfterFirstCall() throws IOException, InterruptedException, LibsodiumException {
         Operation<String> operation = buildOperation(true, true);
 
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn(Utils.jsonStringify(operation));
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse);
 
         operation.setDone(false);
         operations.wait(operation);
-        verify(client, times(1)).fetch(anyString(), anyString(), isNull(), isNull());
+        verify(client, times(1)).fetch(anyString(), anyString(), isNull());
     }
 
     @Test
     @DisplayName("Returns when operation is done after second call")
-    void returnsWhenOperationIsDoneAfterSecondCall() throws SodiumException, JsonProcessingException, IOException, InterruptedException {
+    void returnsWhenOperationIsDoneAfterSecondCall() throws IOException, InterruptedException, LibsodiumException {
         Operation<String> operation1 = buildOperation(false, false);
         Operation<String> operation2 = buildOperation(true, true);
 
@@ -145,7 +144,7 @@ public class OperationsTest {
         Mockito.when(mockResponse2.body()).thenReturn(Utils.jsonStringify(operation2));
         Mockito.when(mockResponse2.statusCode()).thenReturn(200);
 
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse1)
             .thenReturn(mockResponse2);
 
@@ -153,12 +152,12 @@ public class OperationsTest {
                 .maxSleep(10)
                 .build();
         operations.wait(operation1, options);
-        verify(client, times(3)).fetch(anyString(), anyString(), isNull(), isNull());
+        verify(client, times(3)).fetch(anyString(), anyString(), isNull());
     }
 
     @Test
     @DisplayName("Returns when child operation is also done")
-    void returnsWhenChildOperationIsAlsoDone() throws SodiumException, JsonProcessingException, IOException, InterruptedException {
+    void returnsWhenChildOperationIsAlsoDone() throws IOException, InterruptedException, LibsodiumException {
         HttpResponse<String> mockResponse1 = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse1.body()).thenReturn(Utils.jsonStringify(buildOperation(false, false)));
         Mockito.when(mockResponse1.statusCode()).thenReturn(200);
@@ -171,7 +170,7 @@ public class OperationsTest {
         Mockito.when(mockResponse3.body()).thenReturn(Utils.jsonStringify(buildOperation(true, true)));
         Mockito.when(mockResponse3.statusCode()).thenReturn(200);
 
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
             .thenReturn(mockResponse1)
             .thenReturn(mockResponse2)
             .thenReturn(mockResponse3);
@@ -180,19 +179,19 @@ public class OperationsTest {
                 .maxSleep(10)
                 .build();
         operations.wait(buildOperation(false, false), options);
-        verify(client, times(4)).fetch(anyString(), anyString(), isNull(), isNull());
+        verify(client, times(4)).fetch(anyString(), anyString(), isNull());
     }
 
     @Test
     @DisplayName("Throw if aborting operation")
-    void throwIfAbortingOperation() throws SodiumException, IOException, InterruptedException {
+    void throwIfAbortingOperation() throws IOException, InterruptedException, LibsodiumException {
         Operation<String> operation = buildOperation(false, false);
 
         HttpResponse<String> mockResponse = Mockito.mock(HttpResponse.class);
         Mockito.when(mockResponse.body()).thenReturn(Utils.jsonStringify(operation));
         Mockito.when(mockResponse.statusCode()).thenReturn(200);
 
-        when(client.fetch(anyString(), anyString(), isNull(), isNull()))
+        when(client.fetch(anyString(), anyString(), isNull()))
                 .thenReturn(mockResponse);
 
         Operations.WaitOptions options = Operations.WaitOptions.builder()
